# PriRC

./: ID_test.go  IP.txt  Local_test.go  hpc.pk  hpc.vk  iup.vk  lp.vk  main.go
HE/: HE.go  HE_struct.go  HE_struct_test.go  HEtest.c  HEtest.h  paillier.h
Reputation/: ProofOfWork.go  RepBlock.go  RepBlockChain.go  RepTransaction.go  SyncBlock.go  Utils.go  rep_variable.go  reputation_test.go
Reputation/cosi/: cosi.go  sign.go  verify.go
account/: account.go
baby_jubjub/: prc.cpp  snark.go  snark_test.go
baby_jubjub/baby_jubjub_ecc/: prc.h
baby_jubjub/libsnark/baby_jubjub_ecc/: CMakeLists.txt  baby_jubjub.cpp  baby_jubjub.hpp  pedersen_commitment.cpp  pedersen_commitment.hpp  prc.cpp  prc.h
basic/: TxDecSet.go  TxDecision.go  TxList.go  block.go  tool.go  tx.go  utxo.go
ed25519/: ed25519.go
gVar/: global_variable.go
rccache/: cache.go  cache_leader.go  cache_miner.go  getPacket.go  rccache_test.go  tool.go  txBlockChain.go  txDatabase.go
shard/: shard_func.go  shard_func_test.go  shard_struct.go  shard_variable.go
snark/: LeaderCal.go  MerkleTree.go  PedersenCommitment.go  Utils.go  merkle.txt  snark.go  snark_func.go  snark_struct.go  snark_test.go  snark_variable.go
snark/baby_jubjub_ecc/: main.cpp  prc.cpp  prc.h
testforclient/: main.go
testforclient/LocalServerFile/: Local.go
testforclient/client0/: 0TxBlockchain.db  RepBlockchain0.db  client0.go
testforclient/client1/: RepBlockchain1.db  client1.go
testforclient/client2/: client2.go
testforclient/client3/: client3.go
testforclient/cosi_test/: example.go
(+17 files in other folders)
